@@ -14,6 +14,7 @@ base-installer (1.99) UNRELEASED; urgency=low
     - Never select /dev/ramzswap* (compcache) as a hibernation target.
   * Fix hppa kernel selection: "64?" and "(64)?" are not the same thing in
     regular expressions!
+  * Add armel/qemu-versatilepb test; cpuinfo supplied by Oliver Grawert.
 
   [ Christian Perrier ]
   * Correct an error in the Spanish translation. Closes: #510310
